zellij-integration-tests/tests/snapshots/rendering_width__ambiguous_width_characters_render_narrow.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
 Zellij (test)  Tab #1  + 
$ |±°→αβ§¶※×÷⌘⚠|──|
FIXTURE-END█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
