zellij-integration-tests/tests/snapshots/rendering_width__box_drawing_characters_render_narrow.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
 Zellij (test)  Tab #1  + 
$ ┌─┬─┐
│A│B│
├─┼─┤
└─┴─┘
╔═╗█▉▊
FIXTURE-END█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
