zellij-integration-tests/tests/snapshots/rendering_width__characters_whose_width_changed_in_the_new_width_tables_render.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
 Zellij (test)  Tab #1  + 
$ |☰☷|⚊⚏|䷀䷿|㇤㇯|
|ｶ|ﾊ||||៘|ឤ|
FIXTURE-END█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
