zellij-integration-tests/tests/snapshots/rendering_width__cursor_forward_past_content_pads_the_row_before_wide_characters.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$
      世界X
FIXTURE-END█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
