zellij-integration-tests/tests/snapshots/rendering_width__emoji_zwj_and_skin_tone_sequences_render.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: rendered
---
 Zellij (test)  Tab #1  + 
$ 😀|👨👩👧👦|👋🏽|🧑🏿🚀|⚠|🇺🇸|
FIXTURE-END█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
