zellij-integration-tests/tests/snapshots/rendering_width__wide_character_straddling_the_right_edge_wraps_whole.snap
---
source: zellij-integration-tests/tests/rendering_width.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$                                                                                                                    AB
世界
FIXTURE-END█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
